jenkins/ingress-jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: jenkins
  annotations:
    haproxy.org/check: "true"
    haproxy.org/forwarded-for: "false"
    haproxy.org/load-balance: "roundrobin"
    haproxy.org/cookie-persistence: "mycookie"    
spec:
  tls:
  - hosts:
      - jenkins.kubernetes.local
    secretName: jenkins
  rules:
  - host: jenkins.kubernetes.local
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 4488
